--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "kivy",
+            "module": "enter-your-module-name-here",
             "console": "integratedTerminal"
         },
         {
